--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
                 <td align="center">
                     <a href="guestbook.html">Sign our Guestbook</a> |
                     <a href="forum.html">Forum</a> |
-                    <a href="challenges.html">Secret Button</a>
+                    <a href="challenges.html">Live with us</a>
                 </td>
             </tr>
         </table>
