--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
     <!-- adding a comment -->
 
     <marquee scrollamount="15" style="position: fixed; top: 0; left: 0; width: 100%; padding: 10px 0; font-size: 18px; font-weight: bold; text-align: center;">
-        Welcome to Uyghur Hacker House - 12 Beckett Street, Chinatown
+        Welcome to Uyghur Hacker House - 12 Beckett Street
     </marquee>
 
     <div>
