--- a/challenges.html
+++ b/challenges.html
@@ -70,7 +70,7 @@
         <p>   lose any unsaved information in all applications.</p>
         
         <div class="error-code">
-            <p>Error: CHALLENGE_NOT_FOUND</p>
+            <p>Error: ROOM_NOT_FOUND</p>
             <p>Technical information:</p>
             <p>*** STOP: 0x0000000A (0x00000000, 0x00000000, 0x00000000, 0x00000000)</p>
             <p>*** SYSROOT\SYSTEM32\CHALLENGES.SYS - Address F86B5A89 base at F86B5000, DateStamp 3d6dd67c</p>
